# apps/auth-service/src/routes/auth.routes.ts
@@ -1,9 +1,14 @@
 import express from "express";
-import { userRegistration, verifyUserOtp } from "../controller/auth.controller";
+import {
+  loginUser,
+  userRegistration,
+  verifyUserOtp,
+} from "../controller/auth.controller";
 
 const router = express.Router();
 
 router.post("/register", userRegistration);
 router.post("/verify-otp", verifyUserOtp);
+router.post("/login", loginUser);
 
 export default router;
